Fix contact page and privacy policy on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -102,7 +102,7 @@ body
 {
 	#main-page
 	{
-		padding-top: 50px;
+		padding-top: 80px;
 		padding-bottom: 120px;
 	}
 	.hide-mobile { display: none; }
